--- a/index.css
+++ b/index.css
@@ -118,3 +118,41 @@ h1{
 .lorem2{
     margin-bottom: 15px;
 }
+
+
+.box{
+    width: 230px;
+    height: 300px;
+    box-shadow: 4px 4px 15px;
+    background-color: black;
+    text-align: center;
+    padding: 15px;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    
+
+}
+
+.icon{
+    width: 100px;
+}
+
+.btn{
+    background-color: gray;
+    margin-top: 10px;
+}
+
+.box-title{
+    padding: 10px;
+}
+.box-dis{
+    padding: 5px;
+}
+
+.service-container{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    background-color: rgba(10, 9, 9, 0.877);
+}
